Alignment error fixed

--- a/css/start_up.css
+++ b/css/start_up.css
@@ -15,9 +15,6 @@ body,
     
 }
 
-.red {
-    text-align: center;
-}
 
 .cover-text {
     text-align: center;
